Potential fix for icons misalignment in menu

--- a/engines/common/nucleus/css-compiled/nucleus.css
+++ b/engines/common/nucleus/css-compiled/nucleus.css
@@ -1612,8 +1612,9 @@ th {
 }
 
 .g-menu-item-container > i {
+  display: table-cell;
   vertical-align: middle;
-  margin-right: 0.2rem;
+  padding-right: 0.2rem;
 }
 
 .g-menu-item-subtitle {
